--- a/cleats.ini
+++ b/cleats.ini
@@ -4,8 +4,8 @@ module = wsgi
 master = true
 processes = 5
 
-socket = cleats.sock
-chmod-socket = 660
+socket = /tmp/cleats.sock
+chmod-socket = 777
 vacuum = true
 
 die-on-term = true
