added simple redeploy and webhook script

--- a/example_conf/uwsgi.service
+++ b/example_conf/uwsgi.service
@@ -2,7 +2,7 @@
 Description=uWSGI instance serving cleats-racing
 
 [Service]
-ExecStart=/usr/bin/bash -c 'cd /www/cleats; source venv/bin/activate; uwsgi --ini cleats.ini'
+ExecStart=/usr/bin/bash -c 'cd /www/cleats-racing; source venv/bin/activate; uwsgi --ini cleats.ini'
 
 [Install]
 WantedBy=multi-user.target
